# criterion-iai

./: Cargo.toml  README.md
.buildkite/: pipeline.yml
benches/: criterion_iai_benchmark.rs  criterion_iai_first_mover_benchmark.rs
snapshots/: bench.snap
