[package]
name = "criterion-iai"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.3.5"
iai = "0.1.1"

[[bench]]
name = "criterion_iai_benchmark"
harness = false

# NOTE: the numbers these produce are presently unstable
#[[bench]]
#name = "criterion_iai_first_mover_benchmark"
#harness = false
